# KommunikationsKrake

./: .gitignore  CODE_OF_CONDUCT.md  DB_PASS.txt  DB_USER.txt  Dockerfile  LICENSE  Procfile  README.md  app.py  deploy.sh  docker-compose.yml  docker-compose_obfuscated.yml  docker-compose_old.yml  heroku.yml  pyproject.toml  requirements.txt
archive/: df_kommunikate.md  send_html_mail.py  send_mail.py  watson_embedded.md
archive/backup_dialogflow/: KomKra-Prototype-dialog-2.json
archive/database/: openAPI.yaml  openAPI_datenbank_sommerblut.yaml
archive/ibm/: openAPI_ibm_assistant-v2.json  open_session_test.py
backend/: Dockerfile  api_test.py  app.py  calendar_events.py  db_auth.py  dgs_videos.csv  faq.py  fears.py  fears_collected.csv  fears_curated.csv  feedback.py  flask_test.py  glossary.csv  glossary.py  intent_logic.py  openAPI_datenbank_sommerblut.json  openAPI_datenbank_sommerblut.yaml  requirements.txt  response_func.py  retrieve_from_gdf.py  sample_jsons.py  sb_db_request.py  send_yagmail.py  set_context.py  smalltalk.py  team.csv  team.py  video_builder.py  webhook.py  wsgi.py
backend/events/: BIOTOPE.ics  Testevent.ics  ULTIMA RATIO.ics  ZukunftsWerk!.ics
backend/sb_db/: README.md  __init__.py  api_client.py  configuration.py
backend/sb_db/docs/: Tag.md  (+25 more)
backend/sb_db_api/: setup.py
backend/sb_db_old/: api_client.py  rest.py
backup_dialogflow/: KomKra-Prototype-dialog.json
database/: sb_db_conv.json
dialogflow_backend/: index.js
docs/: _config.yml  df_kommunikate.md  dialogflow.md  dialogflow_embedded.md  index.md  watson_embedded.md
(+511 files in other folders)
