[tool.poetry]
name = "kommunikationskrake"
version = "0.1.0"
description = ""
authors = ["arontaupe <aron@petau.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
requests = "^2.28.2"
certifi = "^2022.12.7"
urllib3 = "^1.26.14"
pandas = "^1.5.3"
six = "^1.16.0"
werkzeug = "^2.2.3"
cachetools = "^5.3.0"
flask-httpauth = "^4.7.0"
python-dateutil = "^2.8.2"
setuptools = "^67.4.0"
gunicorn = "^20.1.0"
numpy = "^1.24.2"
yagmail = "^0.15.293"
icalendar = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
